# sinfo

./: .env  Cargo.toml  LICENSE
server/server/: Cargo.toml
server/server-application/: Cargo.toml
server/server-application/src/: error.rs  usecase.rs
server/server-application/src/usecase/: cpu.rs  sys.rs
server/server-domain/: Cargo.toml
server/server-domain/src/: console.rs  cpu.rs  error.rs  lib.rs  sys.rs
server/server-infrastructure/: Cargo.toml
server/server-infrastructure/src/: accessor.rs  error.rs  lib.rs
server/server-infrastructure/src/accessor/: console.rs  cpu.rs  sys.rs
server/server-presentation/: Cargo.toml
server/server-presentation/src/: controller.rs  lib.rs
server/server-presentation/src/controller/: cpu.rs  sys.rs
server/server/src/: main.rs
