[workspace]
members = [
  "server/*"
]
resolver = "2"

[workspace.dependencies]
shaku = "0.6.1"
async-trait = "0.1.67"
axum = { version = "0.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.6"
once_cell = "1.17.1"
