[package]
name = "server-presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server-application = { path = "../server-application" }
server-domain = { path = "../server-domain" }

shaku = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
